cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_128.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb_enc.c:148: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb_enc.c:148:5: Write of unused value
146.       iv = &(*ivec)[0];
147.       l2c(v0, iv);
148.       l2c(v1, iv);
           ^
149.       v0 = v1 = d0 = d1 = ti[0] = ti[1] = 0;
150.   }
